[package]
name = "tgcryptox"
version = "1.0.1"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Fast and Portable Cryptography Extension Library for Pyrogram, Rust rewrite of TgCrypto"
authors = ["SychO"]
repository = "https://github.com/SychO3/tgcryptoX"

[lib]
name = "tgcrypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
aes = "0.8"
